force-app/main/default/objects/GiftTransaction/fields/Allocation_not_paid__c.field-meta.xml
<CustomField>
    <fullName>Allocation_not_paid__c</fullName>
    <label>Allocation Not Paid</label>
    <summaryFilterItems>
        <field>GiftTransactionDesignation.Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>GiftTransactionDesignation.GiftTransactionId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>