force-app/main/default/objects/GiftTransaction/fields/Data_di_Competenza__c.field-meta.xml
<CustomField>
    <fullName>Data_di_Competenza__c</fullName>
    <formula>Donation__r.Data_di_Competenza__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data di Competenza</label>
    <type>Date</type>
</CustomField>