force-app/main/default/objects/GiftTransaction/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation</label>
    <referenceTo>GiftEntry</referenceTo>
    <relationshipLabel>Donation Transactions</relationshipLabel>
    <relationshipName>Donation_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>