force-app/main/default/objects/GiftTransaction/fields/Nome_Donatore__c.field-meta.xml
<CustomField>
    <fullName>Nome_Donatore__c</fullName>
    <formula>Donor.Nome_Donatore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Donatore</label>
    <type>Text</type>
</CustomField>