force-app/main/default/objects/GiftTransaction/fields/Original_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Donation_Amount__c</fullName>
    <formula>Donation__r.Original_Donation_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>