force-app/main/default/objects/GiftTransaction/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment not Done</fullName>
                <default>true</default>
                <label>Payment not Done</label>
            </value>
            <value>
                <fullName>Payment Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>