force-app/main/default/objects/GiftTransaction/fields/Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overview Donatore Anno</label>
    <referenceTo>Reporting_Year__c</referenceTo>
    <relationshipLabel>Donazioni</relationshipLabel>
    <relationshipName>Donazioni</relationshipName>
    <type>Lookup</type>
</CustomField>