force-app/main/default/objects/GiftTransaction/fields/Tipo_Donatore__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Donatore__c</fullName>
    <formula>IF(
    ISPICKVAL(Donation__r.Tipo_Donatore__c, &quot;grande_donatore&quot;),
    &quot;Grande Donatore&quot;,
    IF(
        ISPICKVAL(Donation__r.Tipo_Donatore__c, &quot;piccolo_donatore&quot;),
        &quot;Piccolo Donatore&quot;, &quot;&quot;
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Donatore</label>
    <type>Text</type>
</CustomField>