force-app/main/default/objects/GiftTransaction/fields/Total_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocations__c</fullName>
    <label>Total Allocations</label>
    <summaryForeignKey>GiftTransactionDesignation.GiftTransactionId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>