force-app/main/default/objects/GiftTransaction/fields/Totale_Allocato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato__c</fullName>
    <label>Totale Allocato</label>
    <summarizedField>GiftTransactionDesignation.Amount</summarizedField>
    <summaryForeignKey>GiftTransactionDesignation.GiftTransactionId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>