force-app/main/default/objects/GiftTransaction/fields/Totale_Allocato_Pagato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato_Pagato__c</fullName>
    <label>Totale Allocato Pagato</label>
    <summarizedField>GiftTransactionDesignation.Amount</summarizedField>
    <summaryFilterItems>
        <field>GiftTransactionDesignation.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>GiftTransactionDesignation.GiftTransactionId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>