force-app/main/default/objects/GiftTransaction/fields/Transazione_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Transazione_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transazione Shadow</label>
    <referenceTo>Transazione_Shadow__c</referenceTo>
    <relationshipLabel>Donation Transactions</relationshipLabel>
    <relationshipName>Donation_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>