force-app/main/default/objects/GiftTransaction/fields/Withholding__c.field-meta.xml
<CustomField>
    <fullName>Withholding__c</fullName>
    <formula>Donation__r.Withholding_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withholding %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>