force-app/main/default/objects/GiftTransaction/listViews/All_GiftTransactions.listView-meta.xml
<ListView>
    <fullName>All_GiftTransactions</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <columns>Campaign</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Donation Transactions</label>
</ListView>