force-app/main/default/objects/GiftTransaction/listViews/Donazioni_da_Distribuire.listView-meta.xml
<ListView>
    <fullName>Donazioni_da_Distribuire</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>Data_di_Competenza__c</columns>
    <columns>Original_Donation_Amount__c</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <columns>Campaign</columns>
    <columns>Payment_Status__c</columns>
    <columns>Programma__c</columns>
    <columns>Reporting_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Created</value>
    </filters>
    <label>Donazioni da Allocare</label>
</ListView>