force-app/main/default/objects/GiftTransaction/listViews/Donazioni_Distribuite.listView-meta.xml
<ListView>
    <fullName>Donazioni_Distribuite</fullName>
    <columns>Description</columns>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>Data_di_Competenza__c</columns>
    <columns>Original_Donation_Amount__c</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <columns>Payment_Status__c</columns>
    <columns>Programma__c</columns>
    <columns>Reporting_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Donazioni Allocate</label>
</ListView>